edited hero section

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
   <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
     <div class="hero-container" data-aos="fade-in">
       <h1>Richard Chen</h1>
-      <p>My name is <span class="typed" data-typed-items="Richard, Chen, Richard Chen"></span></p>
+      <p>I'm a <span class="typed" data-typed-items="developer,researcher,photographer "></span></p>
     </div>
   </section><!-- End Hero -->
 
@@ -141,9 +141,8 @@
             <img src="assets/img/profile-img.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
-            <h3>Student</h3>
             <p class="font-italic">
-              "Richard Chen? He's a legend." -Bill Gates
+              "Richard Chen? He's a legend." -some guy named billg on clubhouse
             </p>
             <p class = "font-italic">"Please don't quote me out of context." - Ethan Yeh</p>
             <p>Here are some of my favorites.</p>
@@ -438,20 +437,13 @@
 
         <div class="section-title">
           <h2>Misc</h2>
-          <p>Here are some meaningless graphs</p>
+          <p>I strongly believe in visual learning and love using graphics to derive insights.</p>
 
         </div>
 
         <div class="row skills-content">
 
           <div class="col-lg-6" data-aos="fade-up">
-
-            <div class="progress">
-              <span class="skill">5<i class="val"></i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
-              </div>
-            </div>
 
             <div class="progress">
               <span class="skill">7<i class="val"></i></span>
@@ -466,10 +458,11 @@
                 <div class="progress-bar" role="progressbar" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
+
             <div class="progress">
-              <span class="skill">10<i class="val"></i></span>
+              <span class="skill">How much bigger 7 is than 3<i class="val"></i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
           </div>
