fixed morphing imgur link

--- a/morphing.html
+++ b/morphing.html
@@ -201,7 +201,7 @@
 </div>
 
 <h1>The Morph Sequence</h1>
-The following is a morph sequence of my face to my brother's face hosted on imgur : <blockquote class="http://imgur-embed-pub" lang="en" data-id="a/YwQMoOR"><a href="http://imgur.com/a/YwQMoOR"></a></blockquote><script async src="http://s.imgur.com/min/embed.js" charset="utf-8"></script>
+The following is a morph sequence of my face to my brother's face hosted on imgur : <blockquote class="imgur-embed-pub" lang="en" data-id="a/YwQMoOR"><a href="//imgur.com/a/YwQMoOR"></a></blockquote><script async src="//s.imgur.com/min/embed.js" charset="utf-8"></script>
 
 
 <h1>The mean face of a population</h1>
