--- a/concerts.html
+++ b/concerts.html
@@ -117,32 +117,15 @@
   <div class="row">
   <div class="column">
 
-    <img data-enlargable width="100" src="photos/concerts/electric_guest_1.jpg" style="cursor:zoom-in; width:100%; height:100%">
+    <img data-enlargable width="100" src="photos/concerts/electric_guest_1.jpg" style="cursor:zoom-in; width:100%; height:100%" loading="lazy">
   </div>
   <div class="column">
 
-    <img data-enlargable width="100" src="photos/concerts/electric_guest_2.jpg" style="cursor: zoom-in; width:100%; height:100%">
+    <img data-enlargable width="100" src="photos/concerts/electric_guest_2.jpg" style="cursor: zoom-in; width:100%; height:100%" loading="lazy">
   </div>
   <div class="column">
 
-    <img data-enlargable width="100" src="photos/concerts/electric_guest_3.jpg" style="cursor: zoom-in; width:100%; height:100%">
-  </div>
-
-</div>
-
-<br>
-  <div class="row">
-  <div class="column">
-
-    <img data-enlargable width="100" src="photos/concerts/electric_guest_4.jpg" style="cursor:zoom-in; width:100%; height:100%">
-  </div>
-  <div class="column">
-
-    <img data-enlargable width="100" src="photos/concerts/electric_guest_5.jpg" style="cursor: zoom-in; width:100%; height:100%">
-  </div>
-  <div class="column">
-
-    <img data-enlargable width="100" src="photos/concerts/electric_guest_6.jpg" style="cursor: zoom-in; width:100%; height:100%">
+    <img data-enlargable width="100" src="photos/concerts/electric_guest_3.jpg" style="cursor: zoom-in; width:100%; height:100%" loading="lazy">
   </div>
 
 </div>
@@ -151,15 +134,32 @@
   <div class="row">
   <div class="column">
 
-    <img data-enlargable width="100" src="photos/concerts/electric_guest_7.jpg" style="cursor:zoom-in; width:100%; height:100%">
+    <img data-enlargable width="100" src="photos/concerts/electric_guest_4.jpg" style="cursor:zoom-in; width:100%; height:100%" loading="lazy">
   </div>
   <div class="column">
 
-    <img data-enlargable width="100" src="photos/concerts/electric_guest_8.jpg" style="cursor: zoom-in; width:100%; height:100%">
+    <img data-enlargable width="100" src="photos/concerts/electric_guest_5.jpg" style="cursor: zoom-in; width:100%; height:100%" loading="lazy">
   </div>
   <div class="column">
 
-    <img data-enlargable width="100" src="photos/concerts/electric_guest_9.jpg" style="cursor: zoom-in; width:100%; height:100%">
+    <img data-enlargable width="100" src="photos/concerts/electric_guest_6.jpg" style="cursor: zoom-in; width:100%; height:100%" loading="lazy">
+  </div>
+
+</div>
+
+<br>
+  <div class="row">
+  <div class="column">
+
+    <img data-enlargable width="100" src="photos/concerts/electric_guest_7.jpg" style="cursor:zoom-in; width:100%; height:100%" loading="lazy">
+  </div>
+  <div class="column">
+
+    <img data-enlargable width="100" src="photos/concerts/electric_guest_8.jpg" style="cursor: zoom-in; width:100%; height:100%" loading="lazy">
+  </div>
+  <div class="column">
+
+    <img data-enlargable width="100" src="photos/concerts/electric_guest_9.jpg" style="cursor: zoom-in; width:100%; height:100%" loading="lazy">
   </div>
 
 </div>
@@ -167,31 +167,15 @@
 <div class="row">
   <div class="column">
 
-    <img data-enlargable width="100" src="photos/concerts/arnocorps_1.jpg" style="cursor:zoom-in; width:100%; height:100%">
+    <img data-enlargable width="100" src="photos/concerts/arnocorps_1.jpg" style="cursor:zoom-in; width:100%; height:100%" loading="lazy">
   </div>
   <div class="column">
 
-    <img data-enlargable width="100" src="photos/concerts/arnocorps_2.jpg" style="cursor: zoom-in; width:100%; height:100%">
+    <img data-enlargable width="100" src="photos/concerts/arnocorps_2.jpg" style="cursor: zoom-in; width:100%; height:100%" loading="lazy">
   </div>
   <div class="column">
 
-    <img data-enlargable width="100" src="photos/concerts/arnocorps_3.jpg" style="cursor: zoom-in; width:100%; height:100%">
-  </div>
-
-</div>
-<br>
-<div class="row">
-  <div class="column">
-
-    <img data-enlargable width="100" src="photos/concerts/arnocorps_4.jpg" style="cursor:zoom-in; width:100%; height:100%">
-  </div>
-  <div class="column">
-
-    <img data-enlargable width="100" src="photos/concerts/tsunami_bomb_1.jpg" style="cursor: zoom-in; width:100%; height:100%">
-  </div>
-  <div class="column">
-
-    <img data-enlargable width="100" src="photos/concerts/tsunami_bomb_2.jpg" style="cursor: zoom-in; width:100%; height:100%">
+    <img data-enlargable width="100" src="photos/concerts/arnocorps_3.jpg" style="cursor: zoom-in; width:100%; height:100%" loading="lazy">
   </div>
 
 </div>
@@ -199,15 +183,31 @@
 <div class="row">
   <div class="column">
 
-    <img data-enlargable width="100" src="photos/concerts/tsunami_bomb_3.jpg" style="cursor:zoom-in; width:100%; height:100%">
+    <img data-enlargable width="100" src="photos/concerts/arnocorps_4.jpg" style="cursor:zoom-in; width:100%; height:100%" loading="lazy">
   </div>
   <div class="column">
 
-    <img data-enlargable width="100" src="photos/concerts/tsunami_bomb_4.jpg" style="cursor: zoom-in; width:100%; height:100%">
+    <img data-enlargable width="100" src="photos/concerts/tsunami_bomb_1.jpg" style="cursor: zoom-in; width:100%; height:100%" loading="lazy">
   </div>
   <div class="column">
 
-    <img data-enlargable width="100" src="photos/concerts/tsunami_bomb_5.jpg" style="cursor: zoom-in; width:100%; height:100%">
+    <img data-enlargable width="100" src="photos/concerts/tsunami_bomb_2.jpg" style="cursor: zoom-in; width:100%; height:100%" loading="lazy">
+  </div>
+
+</div>
+<br>
+<div class="row">
+  <div class="column">
+
+    <img data-enlargable width="100" src="photos/concerts/tsunami_bomb_3.jpg" style="cursor:zoom-in; width:100%; height:100%" loading="lazy">
+  </div>
+  <div class="column">
+
+    <img data-enlargable width="100" src="photos/concerts/tsunami_bomb_4.jpg" style="cursor: zoom-in; width:100%; height:100%" loading="lazy">
+  </div>
+  <div class="column">
+
+    <img data-enlargable width="100" src="photos/concerts/tsunami_bomb_5.jpg" style="cursor: zoom-in; width:100%; height:100%" loading="lazy">
   </div>
 
 </div>
