Added film section, ordered misc images.

--- a/lightfield.html
+++ b/lightfield.html
@@ -60,8 +60,7 @@
           <li class="active"><a href="index.html"><i class="bx bx-home"></i> <span>Home</span></a></li>
           <li><a href="index.html#about"><i class="bx bx-user"></i> <span>About</span></a></li>
           <li><a href="index.html#portfolio"><i class="bx bx-book-content"></i>Projects</a></li>
-          <li><a href="#photographs"><i class="bx bx-book-content"></i>Photos</a></li>
-          <li><a href="index.html#contact"><i class="bx bx-envelope"></i> Contact</a></li>
+          <li><a href="index.#photographs"><i class="bx bx-book-content"></i>Photos</a></li>
 
         </ul>
       </nav><!-- .nav-menu -->
