--- a/misc.html
+++ b/misc.html
@@ -61,8 +61,7 @@
           <li class="active"><a href="index.html"><i class="bx bx-home"></i> <span>Home</span></a></li>
           <li><a href="index.html#about"><i class="bx bx-user"></i> <span>About</span></a></li>
           <li><a href="index.html#portfolio"><i class="bx bx-book-content"></i>Projects</a></li>
-          <li><a href="#photographs"><i class="bx bx-book-content"></i>Photos</a></li>
-          <li><a href="index.html#contact"><i class="bx bx-envelope"></i> Contact</a></li>
+          <li><a href="index.html#photographs"><i class="bx bx-book-content"></i>Photos</a></li>
 
         </ul>
       </nav><!-- .nav-menu -->
@@ -115,93 +114,93 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 
   <div class="column">
-    <img data-enlargable width="100" src="photos/misc/19.png" style="cursor:zoom-in; width:100%; height:100%" loading="lazy">
+    <img data-enlargable width="100" src="photos/misc/mountain.png" style="cursor:zoom-in; width:100%; height:100%" loading="lazy">
   </div>
 
   <div class="column">
-    <img data-enlargable width="100" src="photos/misc/11.jpg" style="cursor: zoom-in; width:100%; height:100%" loading="lazy">
+    <img data-enlargable width="100" src="photos/misc/bird.jpg" style="cursor: zoom-in; width:100%; height:100%" loading="lazy">
   </div>
 
   <div class="column">
-    <img data-enlargable width="100" src="photos/misc/13.jpg" style="cursor: zoom-in; width:100%; height:100%" loading="lazy">
+    <img data-enlargable width="100" src="photos/misc/stump.jpg" style="cursor: zoom-in; width:100%; height:100%" loading="lazy">
+  </div>
+
+
+
+  <div class="column">
+    <img data-enlargable width="100" src="photos/misc/raymond.jpg" style="cursor: zoom-in; width:100%; height:100%" loading="lazy">
   </div>
 
 
   <div class="column">
-    <img data-enlargable width="100" src="photos/misc/14.jpg" style="cursor: zoom-in; width:100%; height:100%" loading="lazy">
+    <img data-enlargable width="100" src="photos/misc/kenny.png" style="cursor: zoom-in; width:100%; height:100%" loading="lazy">
   </div>
 
 
   <div class="column">
-    <img data-enlargable width="100" src="photos/misc/1.jpg" style="cursor: zoom-in; width:100%; height:100%" loading="lazy">
+    <img data-enlargable width="100" src="photos/misc/coast.jpg" style="cursor: zoom-in; width:100%; height:100%" loading="lazy">
   </div>
 
-  <div class="column">
-    <img data-enlargable width="100" src="photos/misc/3.jpg" style="cursor: zoom-in; width:100%; height:100%" loading="lazy">
-  </div>
 
 
     <div class="column">
-    <img data-enlargable width="100" src="photos/misc/2.jpg" style="cursor: zoom-in; width:100%; height:100%" loading="lazy">
+    <img data-enlargable width="100" src="photos/misc/london.jpg" style="cursor: zoom-in; width:100%; height:100%" loading="lazy">
   </div>
 
+  <div class="column">
+    <img data-enlargable width="100" src="photos/misc/beach.jpg" style="cursor: zoom-in; width:100%; height:100%" loading="lazy">
+  </div>
+
+  <div class="column">
+    <img data-enlargable width="100" src="photos/misc/river.jpg" style="cursor: zoom-in; width:100%; height:100%" loading="lazy">
+  </div>
 
     <div class="column">
-    <img data-enlargable width="100" src="photos/misc/16.jpg" style="cursor: zoom-in; width:100%; height:100%" loading="lazy">
+    <img data-enlargable width="100" src="photos/misc/buildings.jpg" style="cursor: zoom-in; width:100%; height:100%" loading="lazy">
   </div>
 
+  <div class="column">
+    <img data-enlargable width="100" src="photos/misc/lake.jpg" style="cursor: zoom-in; width:100%; height:100%" loading="lazy">
+  </div>
 
     <div class="column">
-    <img data-enlargable width="100" src="photos/misc/17.jpg" style="cursor: zoom-in; width:100%; height:100%" loading="lazy">
+    <img data-enlargable width="100" src="photos/misc/flags.png" style="cursor: zoom-in; width:100%; height:100%" loading="lazy">
   </div>
 
   <div class="column">
-    <img data-enlargable width="100" src="photos/misc/20.png" style="cursor: zoom-in; width:100%; height:100%" loading="lazy">
+    <img data-enlargable width="100" src="photos/misc/corks.jpg" style="cursor: zoom-in; width:100%; height:100%" loading="lazy">
+  </div>
+
+    <div class="column">
+    <img data-enlargable width="100" src="photos/misc/chimney.jpg" style="cursor: zoom-in; width:100%; height:100%" loading="lazy">
   </div>
 
   <div class="column">
-    <img data-enlargable width="100" src="photos/misc/12.jpg" style="cursor: zoom-in; width:100%; height:100%" loading="lazy">
+    <img data-enlargable width="100" src="photos/misc/alley.jpg" style="cursor: zoom-in; width:100%; height:100%" loading="lazy">
+  </div>
+
+
+  <div class="column">
+    <img data-enlargable width="100" src="photos/misc/berkeley.jpg" style="cursor: zoom-in; width:100%; height:100%" loading="lazy">
   </div>
 
   <div class="column">
-    <img data-enlargable width="100" src="photos/misc/7.jpg" style="cursor: zoom-in; width:100%; height:100%" loading="lazy">
+    <img data-enlargable width="100" src="photos/misc/sf.jpg" style="cursor: zoom-in; width:100%; height:100%" loading="lazy">
   </div>
 
   <div class="column">
-    <img data-enlargable width="100" src="photos/misc/8.jpg" style="cursor: zoom-in; width:100%; height:100%" loading="lazy">
+    <img data-enlargable width="100" src="photos/misc/tree.jpg" style="cursor: zoom-in; width:100%; height:100%" loading="lazy">
+  </div>
+  <div class="column">
+    <img data-enlargable width="100" src="photos/misc/lights1.jpg" style="cursor: zoom-in; width:100%; height:100%" loading="lazy">
   </div>
 
-  <div class="column">
-    <img data-enlargable width="100" src="photos/misc/4.jpg" style="cursor: zoom-in; width:100%; height:100%" loading="lazy">
-  </div>
 
-  <div class="column">
-    <img data-enlargable width="100" src="photos/misc/6.jpg" style="cursor: zoom-in; width:100%; height:100%" loading="lazy">
-  </div>
   
   <div class="column">
-    <img data-enlargable width="100" src="photos/misc/5.jpg" style="cursor: zoom-in; width:100%; height:100%" loading="lazy">
+    <img data-enlargable width="100" src="photos/misc/lights2.jpg" style="cursor: zoom-in; width:100%; height:100%" loading="lazy">
   </div>
 
-    <div class="column">
-    <img data-enlargable width="100" src="photos/misc/9.jpg" style="cursor: zoom-in; width:100%; height:100%" loading="lazy">
-  </div>
-
-  <div class="column">
-    <img data-enlargable width="100" src="photos/misc/10.jpg" style="cursor: zoom-in; width:100%; height:100%" loading="lazy">
-  </div>
-
-    <div class="column">
-    <img data-enlargable width="100" src="photos/misc/15.jpg" style="cursor: zoom-in; width:100%; height:100%" loading="lazy">
-  </div>
-
-    <div class="column">
-    <img data-enlargable width="100" src="photos/misc/18.jpg" style="cursor: zoom-in; width:100%; height:100%" loading="lazy">
-  </div>
-
-    <div class="column">
-    <img data-enlargable width="100" src="photos/misc/21.jpg" style="cursor: zoom-in; width:100%; height:100%" loading="lazy">
-  </div>
 
 </div>
 
