Fixed aspect ratios of photos

--- a/breathe.html
+++ b/breathe.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Photos | Breathe</title>
+  <title>Photos | breathe</title>
   <meta content="" name="descriptison">
   <meta content="" name="keywords">
 
@@ -77,10 +77,10 @@
       <div class="container">
 
         <div class="d-flex justify-content-between align-items-center">
-          <h2>Breathe</h2>
+          <h2>breathe</h2>
           <ol>
             <li><a href="index.html">Home</a></li>
-            <li>Breathe</li>
+            <li>breathe</li>
           </ol>
         </div>
 
@@ -109,7 +109,7 @@
 
     <!-- ======= Portfolio Details Section ======= -->
 <div class="container">
-  <h1>Breathe</h1>
+  <h1>breathe</h1>
   <p>Something up above.</p>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 
