Big overhaul time.

--- a/breathe.html
+++ b/breathe.html
@@ -46,7 +46,7 @@
     <div class="d-flex flex-column">
 
       <div class="profile">
-        <img src="assets/img/profile-img.jpg" alt="" class="img-fluid rounded-circle">
+        <img src="assets/img/square-profile.png" alt="" class="img-fluid rounded-circle">
         <h1 class="text-light"><a href="index.html">Richard Chen</a></h1>
         <div class="social-links mt-3 text-center">
           <a href="https://www.youtube.com/channel/UCXCgxPLZV8QcKN8JP0pJmHQ" class="youtube"><i class="bx bxl-youtube"></i></a>
@@ -58,10 +58,9 @@
 
       <nav class="nav-menu">
         <ul>
-          <li class="active"><a href="index.html"><i class="bx bx-home"></i> <span>Home</span></a></li>
-          <li><a href="index.html#about"><i class="bx bx-user"></i> <span>About</span></a></li>
-          <li><a href="index.html#portfolio"><i class="bx bx-book-content"></i>Projects</a></li>
-          <li><a href="index.html#photographs"><i class="bx bx-book-content"></i>Photos</a></li>
+          <li><a href="about.html"><i class="bx bx-user"></i> <span>About</span></a></li>
+          <li><a href="portfolio.html"><i class="bx bx-book-content"></i>Portfolio</a></li>
+          <li><a href="work.html"><i class="bx bx-book-content"></i>Work</a></li>
 
         </ul>
       </nav><!-- .nav-menu -->
@@ -109,44 +108,43 @@
 
     <!-- ======= Portfolio Details Section ======= -->
 <div class="container">
-  <h1>breathe</h1>
-  <p>Something up above.</p>
+
+
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 
   <div class="column">
-    <img data-enlargable width="100" src="photos/breathe/sky1.png" style="cursor:zoom-in; width:100%; height:100%" loading="lazy">
+    <img data-enlargable width="100" src="photos/breathe/breathe-1.jpg" style="cursor:zoom-in; width:100%; height:100%" loading="lazy">
   </div>
 
   <div class="column">
-    <img data-enlargable width="100" src="photos/breathe/sky2.png" style="cursor: zoom-in; width:100%; height:100%" loading="lazy">
+    <img data-enlargable width="100" src="photos/breathe/breathe-2.png" style="cursor: zoom-in; width:100%; height:100%" loading="lazy">
   </div>
 
   <div class="column">
-    <img data-enlargable width="100" src="photos/breathe/sky3.png" style="cursor: zoom-in; width:100%; height:100%" loading="lazy">
-  </div>
-
-
-  <div class="column">
-    <img data-enlargable width="100" src="photos/breathe/sky4.png" style="cursor: zoom-in; width:100%; height:100%" loading="lazy">
+    <img data-enlargable width="100" src="photos/breathe/breathe-3.png" style="cursor: zoom-in; width:100%; height:100%" loading="lazy">
   </div>
 
 
   <div class="column">
-    <img data-enlargable width="100" src="photos/breathe/sky5.png" style="cursor: zoom-in; width:100%; height:100%" loading="lazy">
+    <img data-enlargable width="100" src="photos/breathe/breathe-4.jpg" style="cursor: zoom-in; width:100%; height:100%" loading="lazy">
   </div>
 
   <div class="column">
-    <img data-enlargable width="100" src="photos/breathe/sky6.png" style="cursor: zoom-in; width:100%; height:100%" loading="lazy">
+    <img data-enlargable width="100" src="photos/breathe/breathe-5.jpg" style="cursor: zoom-in; width:100%; height:100%" loading="lazy">
+  </div>
+
+  <div class="column">
+    <img data-enlargable width="100" src="photos/breathe/breathe-6.jpg" style="cursor: zoom-in; width:100%; height:100%" loading="lazy">
   </div>
 
 
   <div class="column">
-    <img data-enlargable width="100" src="photos/breathe/sky7.png" style="cursor: zoom-in; width:100%; height:100%" loading="lazy">
+    <img data-enlargable width="100" src="photos/breathe/breathe-7.png" style="cursor: zoom-in; width:100%; height:100%" loading="lazy">
   </div>
 
 
   <div class="column">
-    <img data-enlargable width="100" src="photos/breathe/sky8.png" style="cursor: zoom-in; width:100%; height:100%" loading="lazy">
+    <img data-enlargable width="100" src="photos/breathe/breathe-8.jpg" style="cursor: zoom-in; width:100%; height:100%" loading="lazy">
   </div>
 
 
@@ -167,7 +165,6 @@
       <div class="copyright">
       </div>
       <div class="credits">
-        Made with Bootstrap
       </div>
     </div>
   </footer><!-- End  Footer -->
