--- a/moving.html
+++ b/moving.html
@@ -46,7 +46,7 @@
     <div class="d-flex flex-column">
 
       <div class="profile">
-        <img src="assets/img/profile-img.jpg" alt="" class="img-fluid rounded-circle">
+        <img src="assets/img/square-profile.png" alt="" class="img-fluid rounded-circle">
         <h1 class="text-light"><a href="index.html">Richard Chen</a></h1>
         <div class="social-links mt-3 text-center">
           <a href="https://www.youtube.com/channel/UCXCgxPLZV8QcKN8JP0pJmHQ" class="youtube"><i class="bx bxl-youtube"></i></a>
@@ -58,10 +58,9 @@
 
       <nav class="nav-menu">
         <ul>
-          <li class="active"><a href="index.html"><i class="bx bx-home"></i> <span>Home</span></a></li>
-          <li><a href="index.html#about"><i class="bx bx-user"></i> <span>About</span></a></li>
-          <li><a href="index.html#portfolio"><i class="bx bx-book-content"></i>Projects</a></li>
-          <li><a href="index.html#photographs"><i class="bx bx-book-content"></i>Photos</a></li>
+          <li><a href="about.html"><i class="bx bx-user"></i> <span>About</span></a></li>
+          <li><a href="portfolio.html"><i class="bx bx-book-content"></i>Portfolio</a></li>
+          <li><a href="work.html"><i class="bx bx-book-content"></i>Work</a></li>
 
         </ul>
       </nav><!-- .nav-menu -->
@@ -107,34 +106,31 @@
 }
 </style>
 
-    <!-- ======= Portfolio Details Section ======= -->
-<div class="container">
-  <h1>moving</h1>
-  <p>Some weeks stand still. Others pass by in a heartbeat. But we move forward nonetheless.</p>
+ <div class="container">
+
+
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 
   <div class="column">
-    <img data-enlargable width="100" src="photos/moving/1.jpg" style="cursor:zoom-in; width:100%; height:100%" loading="lazy">
+    <img data-enlargable width="100" src="photos/moving/moving.jpg" style="cursor:zoom-in; width:100%; height:100%" loading="lazy">
   </div>
 
   <div class="column">
-    <img data-enlargable width="100" src="photos/moving/2.jpg" style="cursor: zoom-in; width:100%; height:100%" loading="lazy">
+    <img data-enlargable width="100" src="photos/moving/moving-2.jpg" style="cursor: zoom-in; width:100%; height:100%" loading="lazy">
   </div>
 
   <div class="column">
-    <img data-enlargable width="100" src="photos/moving/3.jpg" style="cursor: zoom-in; width:100%; height:100%" loading="lazy">
-  </div>
-
-
-  <div class="column">
-    <img data-enlargable width="100" src="photos/moving/4.jpg" style="cursor: zoom-in; width:100%; height:100%" loading="lazy">
+    <img data-enlargable width="100" src="photos/moving/moving-3.jpg" style="cursor: zoom-in; width:100%; height:100%" loading="lazy">
   </div>
 
 
   <div class="column">
-    <img data-enlargable width="100" src="photos/moving/5.jpg" style="cursor: zoom-in; width:100%; height:100%" loading="lazy">
+    <img data-enlargable width="100" src="photos/moving/moving-4.jpg" style="cursor: zoom-in; width:100%; height:100%" loading="lazy">
   </div>
 
+  <div class="column">
+    <img data-enlargable width="100" src="photos/moving/moving-5.jpg" style="cursor: zoom-in; width:100%; height:100%" loading="lazy">
+  </div>
 
 </div>
 
@@ -153,7 +149,6 @@
       <div class="copyright">
       </div>
       <div class="credits">
-        Made with Bootstrap
       </div>
     </div>
   </footer><!-- End  Footer -->
