--- a/breathe.html
+++ b/breathe.html
@@ -50,8 +50,7 @@
         <h1 class="text-light"><a href="index.html">Richard Chen</a></h1>
         <div class="social-links mt-3 text-center">
           <a href="https://www.youtube.com/channel/UCXCgxPLZV8QcKN8JP0pJmHQ" class="youtube"><i class="bx bxl-youtube"></i></a>
-          <a href="https://www.facebook.com/richard.p.chen1/" class="facebook"><i class="bx bxl-facebook"></i></a>
-          <a href="https://www.instagram.com/not_richardchen/" class="instagram"><i class="bx bxl-instagram"></i></a>
+          <a href="https://www.instagram.com/im_richardchen/" class="instagram"><i class="bx bxl-instagram"></i></a>
           <a href="https://www.linkedin.com/in/richardchen169/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
         </div>
       </div>
@@ -117,11 +116,11 @@
   </div>
 
   <div class="column">
-    <img data-enlargable width="100" src="photos/breathe/breathe-2.png" style="cursor: zoom-in; width:100%; height:100%" loading="lazy">
+    <img data-enlargable width="100" src="photos/breathe/breathe-2.jpg" style="cursor: zoom-in; width:100%; height:100%" loading="lazy">
   </div>
 
   <div class="column">
-    <img data-enlargable width="100" src="photos/breathe/breathe-3.png" style="cursor: zoom-in; width:100%; height:100%" loading="lazy">
+    <img data-enlargable width="100" src="photos/breathe/breathe-3.jpg" style="cursor: zoom-in; width:100%; height:100%" loading="lazy">
   </div>
 
 
@@ -139,7 +138,7 @@
 
 
   <div class="column">
-    <img data-enlargable width="100" src="photos/breathe/breathe-7.png" style="cursor: zoom-in; width:100%; height:100%" loading="lazy">
+    <img data-enlargable width="100" src="photos/breathe/breathe-7.jpg" style="cursor: zoom-in; width:100%; height:100%" loading="lazy">
   </div>
 
 
