--- a/escape.html
+++ b/escape.html
@@ -50,8 +50,7 @@
         <h1 class="text-light"><a href="index.html">Richard Chen</a></h1>
         <div class="social-links mt-3 text-center">
           <a href="https://www.youtube.com/channel/UCXCgxPLZV8QcKN8JP0pJmHQ" class="youtube"><i class="bx bxl-youtube"></i></a>
-          <a href="https://www.facebook.com/richard.p.chen1/" class="facebook"><i class="bx bxl-facebook"></i></a>
-          <a href="https://www.instagram.com/not_richardchen/" class="instagram"><i class="bx bxl-instagram"></i></a>
+          <a href="https://www.instagram.com/im_richardchen/" class="instagram"><i class="bx bxl-instagram"></i></a>
           <a href="https://www.linkedin.com/in/richardchen169/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
         </div>
       </div>
@@ -151,29 +150,31 @@
 <div class="masonry">
   
   <div class="item">
-    <img data-enlargable width="100" src="photos/escape/escape.jpg" style="cursor: zoom-in; width:100%; height:100%" loading="lazy">
-  </div>
-  <div class="item">
-    <img data-enlargable width="100" src="photos/escape/escape-2.jpg" style="cursor: zoom-in; width:100%; height:100%" loading="lazy">
-  </div>
-  
-  <div class="item">
     <img data-enlargable width="100" src="photos/escape/escape-3.jpg" style="cursor: zoom-in; width:100%; height:100%" loading="lazy">
   </div>
-  
   <div class="item">
     <img data-enlargable width="100" src="photos/escape/escape-4.jpg" style="cursor: zoom-in; width:100%; height:100%" loading="lazy">
   </div>
-
+  
+  <div class="item">
+    <img data-enlargable width="100" src="photos/escape/escape-5.jpg" style="cursor: zoom-in; width:100%; height:100%" loading="lazy">
+  </div>
+  
   <div class="item">
     <img data-enlargable width="100" src="photos/escape/escape-6.jpg" style="cursor: zoom-in; width:100%; height:100%" loading="lazy">
   </div>
+
+  <div class="item">
+    <img data-enlargable width="100" src="photos/escape/escape-0.jpg" style="cursor: zoom-in; width:100%; height:100%" loading="lazy">
+  </div>
   
   <div class="item">
-    <img data-enlargable width="100" src="photos/escape/escape-7.jpg" style="cursor: zoom-in; width:100%; height:100%" loading="lazy">
+    <img data-enlargable width="100" src="photos/escape/escape-1.jpg" style="cursor: zoom-in; width:100%; height:100%" loading="lazy">
   </div>
 
-  
+  <div class="item">
+    <img data-enlargable width="100" src="photos/escape/escape-2.jpg" style="cursor: zoom-in; width:100%; height:100%" loading="lazy">
+  </div>
 
 <br>
 
