--- a/moving.html
+++ b/moving.html
@@ -50,8 +50,7 @@
         <h1 class="text-light"><a href="index.html">Richard Chen</a></h1>
         <div class="social-links mt-3 text-center">
           <a href="https://www.youtube.com/channel/UCXCgxPLZV8QcKN8JP0pJmHQ" class="youtube"><i class="bx bxl-youtube"></i></a>
-          <a href="https://www.facebook.com/richard.p.chen1/" class="facebook"><i class="bx bxl-facebook"></i></a>
-          <a href="https://www.instagram.com/not_richardchen/" class="instagram"><i class="bx bxl-instagram"></i></a>
+          <a href="https://www.instagram.com/im_richardchen/" class="instagram"><i class="bx bxl-instagram"></i></a>
           <a href="https://www.linkedin.com/in/richardchen169/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
         </div>
       </div>
@@ -112,7 +111,7 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 
   <div class="column">
-    <img data-enlargable width="100" src="photos/moving/moving.jpg" style="cursor:zoom-in; width:100%; height:100%" loading="lazy">
+    <img data-enlargable width="100" src="photos/moving/moving-1.jpg" style="cursor:zoom-in; width:100%; height:100%" loading="lazy">
   </div>
 
   <div class="column">
