--- a/portfolio.html
+++ b/portfolio.html
@@ -111,8 +111,7 @@
         <h1 class="text-light"><a href="index.html">Richard Chen</a></h1>
         <div class="social-links mt-3 text-center">
           <a href="https://www.youtube.com/channel/UCXCgxPLZV8QcKN8JP0pJmHQ" class="youtube"><i class="bx bxl-youtube"></i></a>
-          <a href="https://www.facebook.com/richard.p.chen1/" class="facebook"><i class="bx bxl-facebook"></i></a>
-          <a href="https://www.instagram.com/not_richardchen/" class="instagram"><i class="bx bxl-instagram"></i></a>
+          <a href="https://www.instagram.com/im_richardchen/" class="instagram"><i class="bx bxl-instagram"></i></a>
           <a href="https://www.linkedin.com/in/richardchen169/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
         </div>
       </div>
@@ -157,17 +156,22 @@
 <div class="masonry">
   
   <div class="item">
-    <img data-enlargable width="100" src="photos/portfolio/portfolio.jpg" style="cursor: zoom-in; width:100%; height:100%" loading="lazy">
+    <img data-enlargable width="100" src="photos/portfolio/portfolio-1.jpg" style="cursor: zoom-in; width:100%; height:100%" loading="lazy">
   </div>
 
   <div class="item">
-    <img data-enlargable width="100" src="photos/portfolio/portfolio-3.jpg" style="cursor: zoom-in; width:100%; height:100%" loading="lazy">
+    <img data-enlargable width="100" src="photos/portfolio/portfolio-2.jpg" style="cursor: zoom-in; width:100%; height:100%" loading="lazy">
   </div>
   
   <div class="item">
-    <img data-enlargable width="100" src="photos/portfolio/portfolio-4.jpg" style="cursor: zoom-in; width:100%; height:100%" loading="lazy">
+    <img data-enlargable width="100" src="photos/portfolio/portfolio-3.jpg" style="cursor: zoom-in; width:100%; height:100%" loading="lazy">
   </div>
 
+  <div class="item">
+    <img data-enlargable width="100" src="photos/portfolio/portfolio-4.jpg" style="cursor: zoom-in; width:100%; height:100%" loading="lazy">
+  </div>
+  
+  
   <div class="item">
     <img data-enlargable width="100" src="photos/portfolio/portfolio-6.jpg" style="cursor: zoom-in; width:100%; height:100%" loading="lazy">
   </div>
@@ -175,15 +179,11 @@
   <div class="item">
     <img data-enlargable width="100" src="photos/portfolio/portfolio-7.jpg" style="cursor: zoom-in; width:100%; height:100%" loading="lazy">
   </div>
-  
+
   <div class="item">
     <img data-enlargable width="100" src="photos/portfolio/portfolio-8.jpg" style="cursor: zoom-in; width:100%; height:100%" loading="lazy">
   </div>
   
-  <div class="item">
-    <img data-enlargable width="100" src="photos/portfolio/portfolio-18.jpg" style="cursor: zoom-in; width:100%; height:100%" loading="lazy">
-  </div>
-
   <div class="item">
     <img data-enlargable width="100" src="photos/portfolio/portfolio-9.jpg" style="cursor: zoom-in; width:100%; height:100%" loading="lazy">
   </div>
@@ -195,11 +195,23 @@
   <div class="item">
     <img data-enlargable width="100" src="photos/portfolio/portfolio-11.jpg" style="cursor: zoom-in; width:100%; height:100%" loading="lazy">
   </div>
-  
+
+  <div class="item">
+    <img data-enlargable width="100" src="photos/portfolio/portfolio-12.jpg" style="cursor: zoom-in; width:100%; height:100%" loading="lazy">
+  </div>
+
   <div class="item">
     <img data-enlargable width="100" src="photos/portfolio/portfolio-13.jpg" style="cursor: zoom-in; width:100%; height:100%" loading="lazy">
   </div>
+  
+  <div class="item">  
+    <img data-enlargable width="100" src="photos/portfolio/portfolio-14.jpg" style="cursor: zoom-in; width:100%; height:100%" loading="lazy">
+  </div>
 
+  <div class="item">
+    <img data-enlargable width="100" src="photos/portfolio/portfolio-5.jpg" style="cursor: zoom-in; width:100%; height:100%" loading="lazy">
+  </div>
+  
   <div class="item">
     <img data-enlargable width="100" src="photos/portfolio/portfolio-15.jpg" style="cursor: zoom-in; width:100%; height:100%" loading="lazy">
   </div>
@@ -207,21 +219,14 @@
   <div class="item">
     <img data-enlargable width="100" src="photos/portfolio/portfolio-16.jpg" style="cursor: zoom-in; width:100%; height:100%" loading="lazy">
   </div>
-  
-  <div class="item">  
-    <img data-enlargable width="100" src="photos/portfolio/portfolio-2.jpg" style="cursor: zoom-in; width:100%; height:100%" loading="lazy">
-  </div>
 
-  <div class="item">
+    <div class="item">
     <img data-enlargable width="100" src="photos/portfolio/portfolio-17.jpg" style="cursor: zoom-in; width:100%; height:100%" loading="lazy">
   </div>
 
   <div class="item">
-    <img data-enlargable width="100" src="photos/portfolio/portfolio-19.jpg" style="cursor: zoom-in; width:100%; height:100%" loading="lazy">
+    <img data-enlargable width="100" src="photos/portfolio/portfolio-18.jpg" style="cursor: zoom-in; width:100%; height:100%" loading="lazy">
   </div>
-
-  
-
 
 </div>
 
