Some minor changes and deletions

--- a/about.html
+++ b/about.html
@@ -87,7 +87,9 @@
 
         <div class="section-title">
           <h2>About</h2>
-          <p>I'm a bay area + DMV based photographer who likes taking pictures of landscapes and occasionally venturing into portraiture. </p>
+          <p>I'm a NYC + DMV based photographer who likes taking pictures of landscapes and occasionally doing economics.
+            I'm interested in Industrial Organization and Agricultural Economics. You can find my CV <a href="resume.pdf" download></a>here</a>.
+          </p>
         </div>
 
         <div class="row">
@@ -95,22 +97,18 @@
             <img src="assets/img/profile-img.png" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
-            <p class="font-italic">
-              "Richard Chen? He's my son." -my mom
-            </p>
-            <p class = "font-italic">"Please don't quote me out of context." - Ethan Yeh</p>
-            <p>Here are some of my favorites.</p>
+            <p>Some of my favorites.</p>
             <div class="row">
               <div class="col-lg-6">
                 <ul>
                   <li><i class="icofont-rounded-right"></i> <strong>NBA team:</strong> Washington Wizards</li>
                   <li><i class="icofont-rounded-right"></i> <strong>Drink:</strong> Water</li>
-                  <li><i class="icofont-rounded-right"></i> <strong>Color: </strong>#c7f2ff </li>
-                  <li><i class="icofont-rounded-right"></i> <strong>Book: </strong>Watership Down by: Richard Adams </li>
+                  <li><i class="icofont-rounded-right"></i> <strong>Color: </strong>Green </li>
+                  <li><i class="icofont-rounded-right"></i> <strong>Book: </strong>If Cats Disappeared from the World </li>
                 </ul>
               </div>
             </div>
-            <p>Feel free to contact me by <a href="mailto: whoaitsrichard14@gmail.com">email</a> or dm me on instagram @im_richardchen</p>
+            <p>You can contact me by email <a href="mailto: whoaitsrichard14@gmail.com">here</a></p>
 
 
           </div>
