--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
           <li><a href="about.html"><i class="bx bx-user"></i> <span>About</span></a></li>
           <li><a href="portfolio.html"><i class="bx bx-book-content"></i> <span>Portfolio</span></a></li>
           <li><a href="work.html"><i class="bx bx-book-content"></i>Work</a></li>
-
+          <li><a href="cv.html"><i class="bx bx-file"></i> <span>CV</span></a></li>
         </ul>
       </nav><!-- .nav-menu -->
       <button type="button" class="mobile-nav-toggle d-xl-none"><i class="icofont-navigation-menu"></i></button>
@@ -113,39 +113,13 @@
   <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
     <div class="hero-container" data-aos="fade-in">
       <h1>Richard Chen</h1>
-      <p>I'm a <span class="typed" data-typed-items="bay area, DMV"></span> based photographer.</p>
+      <p>I'm a NYC based <span class="typed" data-typed-items="student, photographer"></span></p>
     </div>
   </section><!-- End Hero -->
 
   <main id="main">
 
-
-
-
-
-
-
-
-
-
-
   </main><!-- End #main -->
-
-  <!-- ======= Footer ======= -->
-  <footer id="footer">
-    <div class="container">
-      <div class="copyright">
-
-      </div>
-      <div class="credits">
-        <!-- All the links in the footer should remain intact. -->
-        <!-- You can delete the links only if you purchased the pro version. -->
-        <!-- Licensing information: https://bootstrapmade.com/license/ -->
-        <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/iportfolio-bootstrap-portfolio-websites-template/ -->
-
-      </div>
-    </div>
-  </footer><!-- End  Footer -->
 
   <a href="#" class="back-to-top"><i class="icofont-simple-up"></i></a>
 
