--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 
@@ -6,17 +5,12 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Richard Chen</title>
-  <meta content="" name="descriptison">
-  <meta content="" name="keywords">
-
   <!-- Favicons -->
 <!--   <link href="assets/img/favicon.png" rel="icon">
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
  -->
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
-
   <!-- Vendor CSS Files -->
   <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
   <link href="assets/vendor/icofont/icofont.min.css" rel="stylesheet">
@@ -27,81 +21,28 @@
 
   <!-- Template Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
-
-  <!-- =======================================================
-  * Template Name: iPortfolio - v1.2.1
-  * Template URL: https://bootstrapmade.com/iportfolio-bootstrap-portfolio-websites-template/
-  * Author: BootstrapMade.com
-  * License: https://bootstrapmade.com/license/
-  ======================================================== -->
 </head>
-
-<style>
-.container {
-  position: relative;
-  width: 50%;
-}
-
-.image {
-  display: block;
-  width: 100%;
-  height: auto;
-}
-
-.overlay {
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  height: 100%;
-  width: 100%;
-  opacity: 0;
-  transition: .5s ease;
-  background-color: #008CBA;
-}
-
-.container:hover .overlay {
-  opacity: 1;
-}
-
-.text {
-  color: white;
-  font-size: 20px;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  -webkit-transform: translate(-50%, -50%);
-  -ms-transform: translate(-50%, -50%);
-  transform: translate(-50%, -50%);
-  text-align: center;
-}
-</style>
 
 <body>
 
   <!-- ======= Mobile nav toggle button ======= -->
   <button type="button" class="mobile-nav-toggle d-xl-none"><i class="icofont-navigation-menu"></i></button>
-
   <!-- ======= Header ======= -->
   <header id="header">
     <div class="d-flex flex-column">
-
       <div class="profile">
-        <img src="assets/img/square-profile.png" alt="" class="img-fluid rounded-circle">
+        <img src="assets/img/square-profile.jpg" alt="" class="img-fluid rounded-circle">
         <h1 class="text-light"><a href="index.html">Richard Chen</a></h1>
         <div class="social-links mt-3 text-center">
           <a href="https://www.youtube.com/channel/UCXCgxPLZV8QcKN8JP0pJmHQ" class="youtube"><i class="bx bxl-youtube"></i></a>
           <a href="https://www.instagram.com/im_richardchen/" class="instagram"><i class="bx bxl-instagram"></i></a>
         </div>
       </div>
-
       <nav class="nav-menu">
         <ul>
-          <li><a href="about.html"><i class="bx bx-user"></i> <span>About</span></a></li>
-          <li><a href="portfolio.html"><i class="bx bx-book-content"></i> <span>Portfolio</span></a></li>
+          <li><a href="portfolio.html"><i class="bx bx-book-content"></i>Portfolio</a></li>
           <li><a href="work.html"><i class="bx bx-book-content"></i>Work</a></li>
-          <li><a href="cv.html"><i class="bx bx-file"></i> <span>CV</span></a></li>
+
         </ul>
       </nav><!-- .nav-menu -->
       <button type="button" class="mobile-nav-toggle d-xl-none"><i class="icofont-navigation-menu"></i></button>
@@ -109,17 +50,83 @@
     </div>
   </header><!-- End Header -->
 
-  <!-- ======= Hero Section ======= -->
-  <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
-    <div class="hero-container" data-aos="fade-in">
-      <h1>Richard Chen</h1>
-      <p>I'm a NYC based <span class="typed" data-typed-items="student, photographer"></span></p>
-    </div>
-  </section><!-- End Hero -->
-
   <main id="main">
 
+    <!-- ======= Breadcrumbs ======= -->
+    <section id="breadcrumbs" class="breadcrumbs">
+      <div class="container">
+
+        <div class="d-flex justify-content-between align-items-center">
+          <h2></h2>
+          <ol>
+            <li><a href="index.html">Home</a></li>
+            <li>About</li>
+          </ol>
+        </div>
+
+      </div>
+    </section><!-- End Breadcrumbs -->
+
+
+
+    <!-- ======= About Section ======= -->
+    <section id="about" class="about">
+      <div class="container">
+        <div class="section-title">
+          <h2>Richard Chen</h2>
+          <p>Hello! I am an incoming Public Policy PhD Student at the University of Chicago, Harris School of Public Policy
+            where I plan on researching questions in Industrial Organization and Agricultural Economics.
+            <br>
+            <br>
+            Currently I am a predoc at NYU Stern working with Chris Conlon, Paul Scott, and Michael Dickstein.
+            <br>
+            <br>
+            Previously, I was a strat at Goldman Sachs in the Quantitative Investment Strategies group.
+            <br>
+            Before that, I received a BA in Physics and Computer Science at UC Berkeley.
+          </p>
+        </div>
+
+        <div class="row">
+          <div class="col-lg-4" data-aos="fade-right">
+            <img src="assets/img/profile-img.jpg" class="img-fluid" alt="">
+          </div>
+          <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
+            <p>I also enjoy...</p>
+            <div class="row">
+              <div class="col-lg-6">
+                <ul>
+                  <li><i class="icofont-rounded-right"></i> Photography </li>
+                  <li><i class="icofont-rounded-right"></i> Basketball (go Wizards!) </li>
+                  <li><i class="icofont-rounded-right"></i> Green </li>
+                </ul>
+              </div>
+            </div>
+            <p> I'm always willing to talk about research and my experience transitioning into economics research.
+              If you'd like to chat, you can contact me by email <a href="mailto: richardchen@uchicago.edu">here</a></p>
+          </div>
+        </div>
+
+      </div>
+    </section><!-- End About Section -->
+<br>
+
+
+</div>
+
+</div>
+    <!-- End Portfolio Details Section -->
   </main><!-- End #main -->
+
+  <!-- ======= Footer ======= -->
+  <footer id="footer">
+    <div class="container">
+      <div class="copyright">
+      </div>
+      <div class="credits">
+      </div>
+    </div>
+  </footer><!-- End  Footer -->
 
   <a href="#" class="back-to-top"><i class="icofont-simple-up"></i></a>
 
@@ -142,4 +149,3 @@
 </body>
 
 </html>
-
