--- a/hello.html
+++ b/hello.html
@@ -1,72 +1,18 @@
+<script>
+  fetch('sidebar.html')
+  .then(response => response.text())
+  .then(data => document.getElementById('sidebar-div').innerHTML = data);
+  fetch('header.html')
+  .then(response => response.text())
+  .then(data => document.getElementById('header-div').innerHTML = data);
+</script>
+
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-  <meta charset="utf-8">
-  <meta content="width=device-width, initial-scale=1.0" name="viewport">
-
-  <title>Photos | hello,goodbye,hello again</title>
-  <meta content="" name="descriptison">
-  <meta content="" name="keywords">
-
-  <!-- Favicons -->
-<!--   <link href="assets/img/favicon.png" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
- -->
-  <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
-
-  <!-- Vendor CSS Files -->
-  <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-  <link href="assets/vendor/icofont/icofont.min.css" rel="stylesheet">
-  <link href="assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
-  <link href="assets/vendor/venobox/venobox.css" rel="stylesheet">
-  <link href="assets/vendor/owl.carousel/assets/owl.carousel.min.css" rel="stylesheet">
-  <link href="assets/vendor/aos/aos.css" rel="stylesheet">
-
-  <!-- Template Main CSS File -->
-  <link href="assets/css/style.css" rel="stylesheet">
-
-  <!-- =======================================================
-  * Template Name: iPortfolio - v1.2.1
-  * Template URL: https://bootstrapmade.com/iportfolio-bootstrap-portfolio-websites-template/
-  * Author: BootstrapMade.com
-  * License: https://bootstrapmade.com/license/
-  ======================================================== -->
-
-</head>
+<div id="header-div"></div>
 
 <body>
-
-  <!-- ======= Mobile nav toggle button ======= -->
-  <button type="button" class="mobile-nav-toggle d-xl-none"><i class="icofont-navigation-menu"></i></button>
-
-  <!-- ======= Header ======= -->
-  <header id="header">
-    <div class="d-flex flex-column">
-
-      <div class="profile">
-        <img src="assets/img/square-profile.png" alt="" class="img-fluid rounded-circle">
-        <h1 class="text-light"><a href="index.html">Richard Chen</a></h1>
-        <div class="social-links mt-3 text-center">
-          <a href="https://www.youtube.com/channel/UCXCgxPLZV8QcKN8JP0pJmHQ" class="youtube"><i class="bx bxl-youtube"></i></a>
-          <a href="https://www.instagram.com/im_richardchen/" class="instagram"><i class="bx bxl-instagram"></i></a>
-        </div>
-      </div>
-
-      <nav class="nav-menu">
-        <ul>
-          <li><a href="about.html"><i class="bx bx-user"></i> <span>About</span></a></li>
-          <li><a href="portfolio.html"><i class="bx bx-book-content"></i>Portfolio</a></li>
-          <li><a href="work.html"><i class="bx bx-book-content"></i>Work</a></li>
-
-        </ul>
-      </nav><!-- .nav-menu -->
-      <button type="button" class="mobile-nav-toggle d-xl-none"><i class="icofont-navigation-menu"></i></button>
-
-    </div>
-  </header><!-- End Header -->
-
+  <div id="sidebar-div"></div>
   <main id="main">
 
     <!-- ======= Breadcrumbs ======= -->
