--- a/index.html
+++ b/index.html
@@ -1,74 +1,31 @@
+<script>
+  fetch('sidebar.html')
+  .then(response => response.text())
+  .then(data => document.getElementById('sidebar-div').innerHTML = data);
+  fetch('header.html')
+  .then(response => response.text())
+  .then(data => document.getElementById('header-div').innerHTML = data);
+</script>
+
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-  <meta charset="utf-8">
-  <meta content="width=device-width, initial-scale=1.0" name="viewport">
-
-  <!-- Favicons -->
-<!--   <link href="assets/img/favicon.png" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
- -->
-  <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
-  <!-- Vendor CSS Files -->
-  <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-  <link href="assets/vendor/icofont/icofont.min.css" rel="stylesheet">
-  <link href="assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
-  <link href="assets/vendor/venobox/venobox.css" rel="stylesheet">
-  <link href="assets/vendor/owl.carousel/assets/owl.carousel.min.css" rel="stylesheet">
-  <link href="assets/vendor/aos/aos.css" rel="stylesheet">
-
-  <!-- Template Main CSS File -->
-  <link href="assets/css/style.css" rel="stylesheet">
-</head>
+<div id="header-div"></div>
 
 <body>
-
-  <!-- ======= Mobile nav toggle button ======= -->
-  <button type="button" class="mobile-nav-toggle d-xl-none"><i class="icofont-navigation-menu"></i></button>
-  <!-- ======= Header ======= -->
-  <header id="header">
-    <div class="d-flex flex-column">
-      <div class="profile">
-        <img src="assets/img/square-profile.jpg" alt="" class="img-fluid rounded-circle">
-        <h1 class="text-light"><a href="index.html">Richard Chen</a></h1>
-        <div class="social-links mt-3 text-center">
-          <a href="https://www.youtube.com/channel/UCXCgxPLZV8QcKN8JP0pJmHQ" class="youtube"><i class="bx bxl-youtube"></i></a>
-          <a href="https://www.instagram.com/im_richardchen/" class="instagram"><i class="bx bxl-instagram"></i></a>
-        </div>
-      </div>
-      <nav class="nav-menu">
-        <ul>
-          <li><a href="portfolio.html"><i class="bx bx-book-content"></i>Portfolio</a></li>
-          <li><a href="work.html"><i class="bx bx-book-content"></i>Work</a></li>
-
-        </ul>
-      </nav><!-- .nav-menu -->
-      <button type="button" class="mobile-nav-toggle d-xl-none"><i class="icofont-navigation-menu"></i></button>
-
-    </div>
-  </header><!-- End Header -->
-
+  <div id="sidebar-div"></div>
   <main id="main">
-
     <!-- ======= Breadcrumbs ======= -->
     <section id="breadcrumbs" class="breadcrumbs">
       <div class="container">
-
         <div class="d-flex justify-content-between align-items-center">
           <h2></h2>
           <ol>
             <li><a href="index.html">Home</a></li>
-            <li>About</li>
           </ol>
         </div>
-
       </div>
-    </section><!-- End Breadcrumbs -->
-
-
-
+    </section>
+    <!-- End Breadcrumbs -->
     <!-- ======= About Section ======= -->
     <section id="about" class="about">
       <div class="container">
@@ -118,16 +75,6 @@
     <!-- End Portfolio Details Section -->
   </main><!-- End #main -->
 
-  <!-- ======= Footer ======= -->
-  <footer id="footer">
-    <div class="container">
-      <div class="copyright">
-      </div>
-      <div class="credits">
-      </div>
-    </div>
-  </footer><!-- End  Footer -->
-
   <a href="#" class="back-to-top"><i class="icofont-simple-up"></i></a>
 
   <!-- Vendor JS Files -->
@@ -142,10 +89,7 @@
   <script src="assets/vendor/owl.carousel/owl.carousel.min.js"></script>
   <script src="assets/vendor/typed.js/typed.min.js"></script>
   <script src="assets/vendor/aos/aos.js"></script>
-
   <!-- Template Main JS File -->
   <script src="assets/js/main.js"></script>
-
 </body>
-
 </html>
