--- a/index.html
+++ b/index.html
@@ -66,6 +66,15 @@
 
       </div>
     </section><!-- End About Section -->
+    
+    <section id="resources" class="about">
+      <div class="container">
+        <div class="section-title">
+          <h2>Resources</h2>
+          <p>Here are some resources I guess?
+          </p>
+        </div>
+    </section><!-- End Resources Section -->
 <br>
 
 
