--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
           <div class="col-lg-4" data-aos="fade-right">
             <img src="assets/img/profile-img.jpg" class="img-fluid" alt="">
           </div>
-          <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
+          <div class="col-lg-8 pt-4 pt-lg-0 content">
             <p>I also enjoy...</p>
             <div class="row">
               <div class="col-lg-6">
