Trying to include CV in the docs

--- a/index.html
+++ b/index.html
@@ -35,12 +35,12 @@
             where I plan on researching questions in Industrial Organization and Agricultural Economics.
             <br>
             <br>
-            Currently I am a predoc at NYU Stern working with Chris Conlon, Paul Scott, and Michael Dickstein.
+            Previously, I was a predoc at NYU Stern working with Chris Conlon, Paul Scott, and Michael Dickstein.
             <br>
             <br>
-            Previously, I was a strat at Goldman Sachs in the Quantitative Investment Strategies group.
+            Before that, I was a strat at Goldman Sachs in the Quantitative Investment Strategies group.
             <br>
-            Before that, I received a BA in Physics and Computer Science at UC Berkeley.
+            I received a BA in Physics and Computer Science at UC Berkeley.
           </p>
         </div>
 
