--- a/sidebar.html
+++ b/sidebar.html
@@ -14,7 +14,7 @@
       <nav class="nav-menu">
         <ul>
           <li><a href="photos.html"><i class="bx bx-book-content"></i>Photos</a></li>
-          <!-- <li><a href="work.html"><i class="bx bx-book-content"></i>Work</a></li> -->
+          <li><a href="cv.html"><i class="bx bx-book-content"></i>CV</a></li>
         </ul>
       </nav><!-- .nav-menu -->
       <button type="button" class="mobile-nav-toggle d-xl-none"><i class="icofont-navigation-menu"></i></button>
