--- a/index.html
+++ b/index.html
@@ -31,16 +31,18 @@
       <div class="container">
         <div class="section-title">
           <h2>Richard Chen</h2>
-          <p>Hello! I am an incoming Public Policy PhD Student at the University of Chicago, Harris School of Public Policy
-            where I plan on researching questions in Industrial Organization and Agricultural Economics.
+          <p>Hello! I am a first year PhD Student at the <a href="https://harris.uchicago.edu/academics/degrees/phd">University of Chicago, Harris School of Public Policy</a>.
+            My research interests are:</p>
+            <ul>
+              <li>Industrial Organization</li>
+              <li>Energy and Environmental Economics</li>
+              <li>Agricultural Economics</li>
+            </ul>
+            I've also recently acquired an interest in auctions.
             <br>
             <br>
-            Currently I am a predoc at NYU Stern working with Chris Conlon, Paul Scott, and Michael Dickstein.
-            <br>
-            <br>
-            Previously, I was a strat at Goldman Sachs in the Quantitative Investment Strategies group.
-            <br>
-            Before that, I received a BA in Physics and Computer Science at UC Berkeley.
+            Before my foray into economics, I was a strat at Goldman Sachs in the Quantitative Investment Strategies group.
+            I also have a BA in Physics and Computer Science at UC Berkeley.
           </p>
         </div>
 
