--- a/index.html
+++ b/index.html
@@ -41,12 +41,12 @@
             I've also recently acquired an interest in auctions.
             <br>
             <br>
-            Previously, I was a predoc at NYU Stern working with Chris Conlon, Paul Scott, and Michael Dickstein.
+            Before my foray into economics, I was a strat at Goldman Sachs in the Quantitative Investment Strategies group.
+            <br>
+            I also have a BA in Physics and Computer Science from UC Berkeley.
             <br>
             <br>
-            Before that, I was a strat at Goldman Sachs in the Quantitative Investment Strategies group.
-            <br>
-            I received a BA in Physics and Computer Science at UC Berkeley.
+            You can contact me by email at: <a href="mailto: richardchen@uchicago.edu">richardchen@uchicago.edu</a></p>
           </p>
         </div>
 
@@ -64,9 +64,7 @@
                   <li><i class="icofont-rounded-right"></i> Green </li>
                 </ul>
               </div>
-            </div>
-            <p> I'm always willing to talk about research and my experience transitioning into economics research.
-              If you'd like to chat, you can contact me by email <a href="mailto: richardchen@uchicago.edu">here</a></p>
+            </div>              
           </div>
         </div>
 
