--- a/index.html
+++ b/index.html
@@ -82,8 +82,7 @@
           <div class="row">
             <div class="col-lg-6">
               <ul>
-                <li><a href="jax_jit.pdf">Jax and JIT basics</a></li>
-              </ul>
+                <li><a href="jax_jit.pdf" download>Jax and JIT basics</a></li>              </ul>
             </div>
         </div>
     </section><!-- End Resources Section -->
