Tried preloading images

--- a/photos.html
+++ b/photos.html
@@ -12,6 +12,30 @@
 <div id="header-div"></div>
 
 
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Preload photos -->
+    <link rel="preload" as="image" href="photos/portfolio/portfolio-19.jpg">
+    <link rel="preload" as="image" href="photos/portfolio/portfolio-21.jpg">
+    <link rel="preload" as="image" href="photos/portfolio/portfolio-22.jpg">
+    <link rel="preload" as="image" href="photos/portfolio/portfolio-23.jpg">
+    <link rel="preload" as="image" href="photos/portfolio/portfolio-24.jpg">
+    <link rel="preload" as="image" href="photos/portfolio/portfolio-1.jpg">
+    <link rel="preload" as="image" href="photos/portfolio/portfolio-2.jpg">
+    <link rel="preload" as="image" href="photos/portfolio/portfolio-4.jpg">
+    <link rel="preload" as="image" href="photos/portfolio/portfolio-10.jpg">
+    <link rel="preload" as="image" href="photos/portfolio/portfolio-11.jpg">
+    <link rel="preload" as="image" href="photos/portfolio/portfolio-8.jpg">
+    <link rel="preload" as="image" href="photos/portfolio/portfolio-20.jpg">
+    <link rel="preload" as="image" href="photos/portfolio/portfolio-14.jpg">
+    <link rel="preload" as="image" href="photos/portfolio/portfolio-25.jpg">
+    <link rel="preload" as="image" href="photos/portfolio/portfolio-26.jpg">
+    <link rel="preload" as="image" href="photos/portfolio/portfolio-27.jpg">
+    <link rel="preload" as="image" href="photos/portfolio/portfolio-28.jpg">
+    <link rel="preload" as="image" href="photos/portfolio/portfolio-29.jpg">
+</head>
+
 
 <style>
 .masonry { /* Masonry container */
