--- a/index.html
+++ b/index.html
@@ -1,3 +1,7 @@
+<head>
+  <meta name="google-site-verification" content="ChRuE9kxN8h-jFqqFJUeUyNxoCxO5IHx7iS9yaXGdZ4" />
+</head>
+
 <script>
   fetch('sidebar.html')
   .then(response => response.text())
