--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             I also have a BA in Physics and Computer Science from UC Berkeley.
             <br>
             <br>
-            You can contact me by email at: <a href="mailto: richardchen@uchicago.edu">richardchen@uchicago.edu</a></p>
+            You can contact me by email: richardchen at uchicago dot edu
           </p>
         </div>
 
