--- a/index.html
+++ b/index.html
@@ -38,12 +38,10 @@
               <li>Energy and Environmental Economics</li>
               <li>Agricultural Economics</li>
             </ul>
-            I've also recently acquired an interest in auctions.
+            I also like auctions.
             <br>
             <br>
-            Before my foray into economics, I was a strat at Goldman Sachs in the Quantitative Investment Strategies group.
-            <br>
-            I also have a BA in Physics and Computer Science from UC Berkeley.
+            Prior to Chicago, I got a BA in Physics and Computer Science from UC Berkeley and was a strat at Goldman Sachs in the Quantitative Investment Strategies group.
             <br>
             <br>
             You can contact me by email at: <a href="mailto: richardchen@uchicago.edu">richardchen@uchicago.edu</a></p>
